reconcile bio and dialog length

--- a/workflow/dev/seq_gen.in
+++ b/workflow/dev/seq_gen.in
@@ -61,7 +61,7 @@ I would like to book a table at the Backstreet Bistro for 5 people at 16:00 on T
 Yes, any suggestions of museums found in the east area of town?
 Can I please have the phone number and address for that place?
 Great that's all the information I needed today, thank you!
-I want to find an expensive restaurant and serves european food. Can i also have the address, phone number and its area. ?
+I want to find an expensive restaurant and serves european food. Can i also have the address, phone number and its area.
 thank you goodbye
 Where's a good place to eat crossover food in Cambridge?
 How about British restaurants in the Centre instead?
@@ -153,7 +153,7 @@ I need two tickets.
 No thanks, that is everything.
 yeah, I'm also looking for a place to stay. I don't like hotels, so a guesthouse would be better. Moderate in price.
 Yes, the hotel should be in the east and doesn't need to have free parking.
-can I have the star rating and idf they have wi fi ?
+can I have the star rating and idf they have wi fi
 OK, that's all I need for now. Thanks.
 Thanks you too Goodbye
 I am looking for a restaurant.
@@ -214,7 +214,7 @@ Ok great. Can you book a room for 6 people and 3 nights starting from Saturday.
 Great, thank you. I'm also in need of an Indian restaurant in the cheap price range. Can you find me one?
 Any will do, what ever you recommend.
 I certainly want to try it then. Please book for 6 people at 11:30 on Saturday.
-Thank you . I am all set.
+Thank you. I am all set.
 Can you assist me in finding me an Expensive Restaurant in Cambridge where I can dine? The restaurant should be serving British foods.
 I'd like it to be in Centre.
 Can you make me a reservation for Saturday please for 3 people?
@@ -581,7 +581,7 @@ Does the hotel have free parking?
 Hmm. Okay. Could you help me find a train? I need to leave on Sunday.
 I want to leave on Sunday and arrive by 14:00.
 I am traveling to cambridge from broxbourne.
-Can you book it for me and get a reference number ?
+Can you book it for me and get a reference number
 Thanks very much for your help today.
 I'm awful with math, what is the travel time on that train?
 Thank you for informing about the total duration.
@@ -700,7 +700,7 @@ That would be fine. I would like reservations on wednesday for 3 people at 18:15
 Yes. I also need a 4 star hotel.
 Parking doesn't matter, but I want it to be in the same area as the restaurant.
 I'll like a hotel with free internet
-Either will do - which place do you think is better?
+Either will do- which place do you think is better?
 Does it have free parking? Also I need to know if they have free internet. The address and the type of hotel it is, got it?
 Yes, please make a reservation for 3 people.
 I actually don't need a booking at this time. I have everything I need. Thank you, goodbye!
@@ -773,7 +773,7 @@ I need to arrive at Cambridge Contemporary Art by 19:15 please.
 No, that will be all, thank you!
 Hey, I need a place to stay with free wifi and free parking.
 Thanks! I really don't care about the area. I need stay in a guesthouse that has free wifi and parking.
-I don't mind about the price but I want something with 4 stars .
+I don't mind about the price but I want something with 4 stars
 That sounds nice. Can you get it for four nights starting Thursday?
 Four people. Thanks.
 Thanks so much. That is all I need. Bye.
@@ -876,7 +876,7 @@ Actually, I think I'll hold off on the reservation, but can you provide their ph
 Thank you. Do you know what type of hotel Lensfield is?
 Does this hotel offer free wifi?
 I need to book a taxi to go between both places,needs to arrive after we finish at restaurant and I need car type and number
-Actually, I know I said *after* we finish at the restaurant, but it turns out I need the taxi arrives at the restaurant at the reservation time - 13:45 on Saturday
+Actually, I know I said *after* we finish at the restaurant, but it turns out I need the taxi arrives at the restaurant at the reservation time- 13:45 on Saturday
 Great, thanks so much. Sorry for the confusion.
 That is everything, thanks for your help.
 Please tell me about the locations of some pools in the south.
@@ -1037,7 +1037,7 @@ No thank you! That is all!
 Hi, I'm going to be visiting soon, and I am interested in trying a restaruant called Curry Prince. Could you give me more information about it?
 No but I would like to make a booking for 5 people at 18:30 on sunday.
 I am also looking for a train. It should should depart from London Kings Cross and should be on the same day.
-The train should go to cambridge and should arrive by 15:00,can you book it for me ?
+The train should go to cambridge and should arrive by 15:00,can you book it for me
 No I just need to make sure I get there by 15:00. I will need the train ID and departure time please.
 I just need the train's departure time and ID.
 OKay perfect do you think you could book that for me please?
@@ -1138,7 +1138,7 @@ I do not care what area it is in.
 How about a cheap restaurant serving Italian food?
 Can you find me a moderately priced chinese restaurant please
 Yes, the one in the north does.
-Yes please - could you make a reservation for 4 people at 12:15 on Saturday?
+Yes please- could you make a reservation for 4 people at 12:15 on Saturday?
 Yes are there any parks in the same area as the restaurant?
 Yes could I please get the phone number.
 Yes, I would like a taxi to go from the two places and make sure it arrives to the restaurant by the booked time.
@@ -1239,7 +1239,7 @@ I need one that includes free parking, but it does not need to have internet.
 I think I would like the Gonville in the central area.
 Yes, I'd like to book for 3 nights starting the same day. There will be 5 people.
 Yes, let's try 2 nights and see if that works.
-Thank you - that's all I need today. Have a great day!
+Thank you- that's all I need today. Have a great day!
 I need a cheap, 2 star hotel to stay at here in Cambridge
 Ok, find me a hotel that has free parking included then.
 Is it in the moderate price range?
@@ -1309,7 +1309,7 @@ Yes I am looking for information on Michael House cafe.
 Yes, please. For a party of 7 on Friday, at 17:15.
 That will be all. Thank you very much.
 I want to find a restaurant in the centre part of town and serves british food.
-I have no preference. can i please have the address and phone number of one of them ?
+I have no preference. can i please have the address and phone number of one of them
 Nope, that'll do it, thank you for your help.
 Yes I am looking for a hotel in the centre of town.
 Price doesn't matter and I don't need internet. I do however need free parking.
@@ -1712,7 +1712,7 @@ I'd like a restaurant in the north part of town that is in the medium price rang
 I don't care
 is there another one as well?
 Yes could you give me the phone number for The Nirala?
-Which part of town it is in ?
+Which part of town it is in
 Thank you goodbye.
 I am looking for an upscale Chinese food restaurant in Cambridge; can you make a recommendation?
 I need something in the Center of town.
@@ -1852,7 +1852,7 @@ That is all I needed today.
 Thanks so much. Can you also find me a place to stay?
 I would like a 4 star moderately priced guesthouse in the north.
 No that's ok. Can I just get the phone number and postcode?
-That will be all for today thanks !
+That will be all for today thanks
 Yes please book for 8 people. I need the reference number. Also, I want information on a restaurant called Bangkok City.
 yes how did you know? lol. Can I have their phone number please
 That is all thank you goodbye
@@ -1931,7 +1931,7 @@ No, thank you. That was it for today. Thank you very much for your assistance. H
 I want to find a restaurant in the north part of town and serves international food.
 Are there any Italian restaurants in that part of town?
 Yes, the address and phone number please.
-thank you . good bye
+thank you. good bye
 I want a place to eat in the west.
 I have a taste for something British.
 I want the most expensive one.
@@ -1943,7 +1943,7 @@ Just book one that will get me to Stevenage by 21:30 please. 2 Tickets, just lik
 Thank you for the booking and reference number. I'll let you know if I need anything else.
 What is there to do in the centre of town?
 Thanks! I also need some help finding a hotel on the east side.
-What star is it ?
+What star is it
 No, I'm not ready to book yet. Thanks for all the help today, that's all I needed. Good bye.
 I also need a place to dine. I'm looking for something cheap in the south.
 Please book Nandos.
@@ -2665,7 +2665,7 @@ I am looking for a cheap restaurant that is in the north part of town.
 Any
 Are there any other options?
 That sounds great. May I have their address please?
-Thank you very much , bye bye
+Thank you very much, bye bye
 Can you help me find a guesthouse with free parking?
 I would like the guesthouse to be in the cheap range.
 Yes, I need to book it for 5 people.
@@ -2923,8 +2923,8 @@ I would prefer one of the expensive places. Need to impress my guests, you know?
 Yes, that sounds good. Please book it for the same 6 people at 12:30 on Sunday.
 Yes, how about 11:30 instead? Please send reference number for the booking.
 No thank you, that is all I needed!
-I am looking for a Thai restaurant - any area will do.
-can i have its phone number and postcode ?
+I am looking for a Thai restaurant- any area will do.
+can i have its phone number and postcode
 That will be all, thank you. Goodbye.
 Yes, we're also looking for a hotel to stay at when we're in town.
 I definitely want a 4-star hotel, not a guesthouse. I don't care about parking, but I do need free wifi.
@@ -2958,7 +2958,7 @@ Is that a guesthouse with 0 stars?
 Okay, great. Please book that for me then. It'll be 1 person for 2 nights
 I will be arriving on Monday.
 I also need a taxi to get me from the hotel to the restaurant by my reservation time.
-Booking was successful. Reference number is : T4EHQENA. Anything else.
+Booking was successful. Reference number is: T4EHQENA. Anything else.
 Can you help me find a moderately priced Indian restaurant?
 Is there anything near the centre? I'll need the postcode and phone number as well.
 Really? No moderately-priced Indian restaurants at all?
@@ -3200,8 +3200,8 @@ Thank you so much for your time today. I appreciate your help! Goodbye!
 I am looking for a place to dine. I would like european food in the expensive price range.
 Is it in the north area?
 Yes please. I would like to book a table for 8 people on Tuesday at 15:00.
-That's great - can you give me the reference number?
-thats all - thanks for great service!
+That's great- can you give me the reference number?
+thats all- thanks for great service!
 I want to eat someplace with unusual food. Price is no object. What can you suggest?
 Hmm. I'm not sure. It needs to be expensive, and I really had my heart set on unusual.
 Then find a European one.
@@ -3368,7 +3368,7 @@ Does that have a 5 star rating?
 I was hoping for something with at least 4 stars.
 I want to book for 2 people and 3 nights starting Sunday.
 I don't have a preference for side of town.
-Can you book it for me and get a reference number ?
+Can you book it for me and get a reference number
 Great I also need a train please.
 I'm going from cambridge to broxbourne after 20:00 on monday.
 Yes, two tickets please
@@ -3517,7 +3517,7 @@ I would like to try the other oriental restaurant for the same time 19:00 for pa
 Can any of them do a time at 18:00? I'll also need a taxi to travel inbetween two locations.
 Wonderful. Thanks for your help. That's all I needed.
 I want to find out more about places to dine in the city centre that serve asian cuisine.
-I don't really have a price range - I just need a table for 2 at 17:00 on Wednesday. Pick your favorite and let me know!
+I don't really have a price range- I just need a table for 2 at 17:00 on Wednesday. Pick your favorite and let me know!
 No, that's it thank you.
 That's an excellent idea. Could you help me find a hotel in the north?
 The hotel should be in the north and should include free wifi.
@@ -3538,7 +3538,7 @@ Yes one in the same price range.
 Thank you! Can you give me the address and the phone number for them?
 Nope, I'm all set. Goodbye!
 I want to find a place to dine located in the north and moderately priced.
-It doesn't matter , please send me an address and postcode for one of them.
+It doesn't matter, please send me an address and postcode for one of them.
 Thanks. Can you also help me find a hotel called Autumn House?
 No, just the phone number, thanks!
 I am looking for a hotel called autumn house, do you happen to have their phone number please?
@@ -3793,7 +3793,7 @@ Yes, I am looking for a restaurant that serves Eritrean food.
 Are there any Eritrean restaurants in the east instead?
 Let's try Italian food.
 Ok great. Can you book a table for 3 at 16:00 on Monday?
-May I have the reference number please ?
+May I have the reference number please
 How about wednesday?
 Okay, maybe try it again for Wednesday?
 Okay should we try a different restaurant then...? I've never had this problem before...
@@ -3871,7 +3871,7 @@ I need to depart from kings lynn on Wednesday and arrive by 9:15.
 Can you tell me when that departs and the total travel time? Also, how much is it?
 I actually won't need a reservation, just the information you provided is enough. Thank you. Have a good day. Bye.
 Thank you for all your help.
-Could you find me a welsh restaurant in the cheap price range ?
+Could you find me a welsh restaurant in the cheap price range
 How about italian type of food?
 Any area will be fine.
 What is their address and phone number?
@@ -3968,7 +3968,7 @@ Thank you, good bye.
 I want to find an expensive restaurant in the north.
 Does it serve unusual food? That's what I'm looking for.
 How about chinese food?
-Can you book it for me and get a reference number ?
+Can you book it for me and get a reference number
 You know what? I'm not quite sure when I want to go. I'll just take the address, postcode, and phone please.
 Yes, is the aylesbray lodge guest house still in operation? I stayed there the last time I was in town years ago and enjoyed it.
 no, i just want to book a room, can you help me with that?
@@ -4018,7 +4018,7 @@ I will need a table on wednesday at 18:15.
 I need the reference number for the booking. Also can you help me find a train going to Cambridge Wednesday?
 I need a train on Wednesday from stevanage to cambridge. It needs to arrive by 10:45.
 Absolutely! What is the travel time?
-Would you like me to book it for you ?
+Would you like me to book it for you
 No, thank you. I need to check some other things before I book.
 No that is all for now.
 No thank you that will be all.
@@ -4057,7 +4057,7 @@ It should be moderately priced.
 book a table for 7 people at 15:45 on monday.
 That is all I need.
 I will also need a train that will leave Cambridge after 2:00 pm to Ely on Tuesday
-Can you book it for me and get a reference number ?
+Can you book it for me and get a reference number
 Thank you so much. What about helping me look for an attraction?
 I would like something fun.
 Let's forget about the attraction for now. Can you help me with a train?
@@ -4330,7 +4330,7 @@ May I please have the phone number?
 Thank You that's all
 Never mind that for now. I need a hotel in the centre that includes free wifi and in the expensive price range.
 That's fine. I'll need it booked for Sunday, 3 nights, and 6 people, please?
-hi how are you ? may i help you sir?
+hi how are you? may i help you sir?
 Yes I need a train from London Kings Cross to Cambridge for Sunday to arrive in Cambridge by 20:45 please.
 I will need 6 tickets.
 That was all I needed. Thank you so much for all the assistance.
@@ -4639,16 +4639,16 @@ Thanks! I'd also like to book a taxi that leaves the restaurant by 17:30.
 I want a taxi back to my hotel. Please provide me a contact number and the car type.
 Thank you so much! Goodbye!
 I'm trying to find a moderately priced restaurant in the East part of town. Can you recommend one to me?
-can you suggest me some indian ones ?
+can you suggest me some indian ones
 Thank you, can you please give me the address and phone number?
 Thank you, goodbye
 Hey! Yeah I am looking for a cheap place to eat in Cambridge. Particularly interested in international food.
 That sounds great. Can you book me a table for 12:00 on Sunday for 5 people please?
-That is all needed , good bye.
+That is all needed, good bye.
 Can you also please find an expensive restaurant in the centre.
 No any restaurant would be okay I just need the type of food they serve.
 what type of food do they serve?
-Yes British food is fine,can you reserve a table ?
+Yes British food is fine,can you reserve a table
 Sorry, you know what, I'll just walk in and demand they seat me. That also works out so well. That's all I need today, thanks!
 Hi I am looking for some info on the Worth House hotel.
 Thank you so much!
@@ -4891,7 +4891,7 @@ Thanks that's all I needed for today.
 I'm looking for a train that goes to cambridge and leaves on friday. Any ideas?
 yes. also find a hotel in the north and should be a 4 star
 I don't need a reservations right now. I do need information on a hotel that has 4 stars in the north in the moderate price range.
-Can you book it for me and get a reference number ?
+Can you book it for me and get a reference number
 Please book for 3 people and for 4 nights starting Friday. I will also need the reference number.
 No that is it. Thanks!
 Find me an expensive restaurant that serves gastropub food
