added clinic dialogues data + minor fix on monologg_gen

--- a/workflow/clinic_data/clinic_BIO/seq.in
+++ b/workflow/clinic_data/clinic_BIO/seq.in
@@ -13,3 +13,122 @@ How about the south side of town?
 Does it offer moderna?
 book it for 3 people on tuesday at 11:00 am.
 No that is all I need. Thank you for your time.
+i am looking for a clinic in the west that offers covid shots
+Any brand would be fine. Could I get the phone number for your recommendation?
+Sounds good, could I get that phone number?
+Yes. Can you book an appointment for me?
+i want to book it for 2 people at 9:00 am on saturday.
+That is all I need to know. Thanks, good bye.
+hi, I am in east san jose and need a clinic for covid shot.
+I'd really prefer pfizer. Which one do you recommend?
+Yes, book it for 3 people at 10:00 am on tuesday.
+How about for 11:00 am on tuesday?
+Great. I am all set then. Have a nice day. Bye.
+Hi there! I need a clinic in the east offers flu shots.
+No, I don't have a preference, but I need the phone number and postal code.
+No, right now, I just need the info. Thanks!
+That is all. thanks
+I am looking for a clinic named Eastern Health.
+I would like to book an appointment for it. Can you help me with that?
+i need flu shots.
+I need it for Thursday at 11:00 am.
+for 4 people.
+that is it thank you.
+I am looking for a clinic. I would like something that offers covid shots.
+Yes, could you book an appointment for 2 at 13:00 on friday?
+yes, pfizer please.
+Thank you so much for your help!
+I am looking for Riverside clinic.
+Yes, I would like to book it for Tuesday at 13:00 and get a reference number.
+Can you try for Wednesday at 11:30?
+flu vaccine
+3 people
+Thanks for everything you have been great!
+No that is all I needed. Thank you ever so kindly.
+I'm looking for an flu shot clinic in the centre if you could help me.
+No, not really. Could you suggest something?
+Yes, I would like both the phone number and the postcode please.
+that is it for today. good day thank you
+Hi, I'd like to find a clinic for covid shots in the south?
+The LuckyStar sounds good. That's all I need.
+Can you also tell me the postcode?
+Thanks for your help. Good bye.
+I want to find a clinic in the west that offers flu shots. Can i also have the address, phone number and its zip code?
+thank you goodbye
+Where's a good place to get covid shots in center sunnyvale.
+How about in the south?
+I would prefer the pfizer.
+Yes please make a booking for 2 people at 12:30 on monday.
+That is all I needed.
+I want a clinic in the north of Cambridge that offers covid shots.
+Please book an appointment for 4 at the one that offers Novavax at 11:30 on Sunday and give me the reference number.
+No, thank you. That will be all for today. Thanks.
+I am looking for a clinic to get covid shot in the east. Phone #, postcode and address please.
+I would prefer pfizer but moderna would be good as well. I will need the phone number and postcode of the clinic. Thanks!
+Thanks for helping me with this. I appreciate it! Goodbye!
+I need a clinic to get covid shots.
+could you provide details for something that offers pfizer?
+No, I have no preference. Just pick one. That will be fine.
+Perfect. please book it for 1 person at 9:00 am on tuesday.
+Nope, that's it. Thanks!
+I would like to book a clinic in north for flu shots.
+No, I don't really care. Just something in the north that offers flu shots.
+Great!! Let get a booking for 2 people at 9:30 am on thursday.
+No, that will be all. Thanks, goodbye.
+Can you help me book an appointment at a clinic for covid shots that's in the centre of town?
+I need moderna, please.
+That sounds good. Please book me an appointment for 3 on Tuesday at 12:45.
+Can we try the same day for 11:45 please? And can I have the reference number as well, thanks.
+That will be all. Thank you for your help!
+Thanks, take care buddy!
+I am looking for a clinic that offers covid shots and in the south part of town.
+Let's go with Pfizer.
+address and phone number please.
+Thank you, goodbye.
+Can you help me find a Covid shot clinic?
+I'm interested in clinics located in the East that offers moderna.
+Yeah, could you book it for 3 people on Monday? I think 16:15 is when we want to be there.
+No, that's all for me today! Thank you! Bye!
+I'm looking to get flu shots around the centre of town, can you find me some clinics?
+Hmm... let me think. Let's try maybe somewhere in the south instead.
+not really, what would you recommend? Can I please have the address and postcode.
+No, that's all. Thanks.
+I am looking for a particular clinic. Its name is called advantage clinic.
+Yes, and can you book an appointment for 2 at 14:00 on Monday, please.
+Hi, can you find me an clinic that offers novavax covid shots?
+Are there any clinic that offers moderna shots?
+Yes, the one in the east please.
+Yes, please book it for 2 people at 13:45 on wednesday.
+No thank you that will be all.
+That was all thank you.
+I'm looking for a clinic to get covid shots. Moderna vaccine in preferred.
+Yes, the clinic should be in the east.
+nope, that's all I need for now. Thanks.
+Thanks you too Goodbye
+I am looking for a clinic.
+Not sure of that, I am looking for a clinic named Nature.
+I would like to book an appointment for 3 people on tuesday at 10:00
+Yes, a different clinic in the same area and one that offers covid shots.
+vaccine brand doesn't matter. anyone will work.
+That is all. Thank you!
+I am looking for a covid shot clinic in the north side of town
+How about south side of town?
+Does it offer pfizer?
+book it for 2 people at 15:00 pm on monday.
+No that is all I need. Thank you for your time.
+Hi, what can you tell me about the CivicMedicalCenter?
+Yes for 1 at 09:30 on Thursday please. I need the reference number then too.
+Thank you so much.
+No that is it. Thank you so much.
+Thank you for your assistance.
+Please find me a place to get covid shots and in the centre.
+I am looking for moderna vaccine.
+Ok great. Can you book an appointment there for Thursday for 1 person at 13:00 please?
+Thank you for your help.
+That is everything. Thank you so much for your help.
+I'm looking for a particular clinic called Modern. Please give me information on that clinic.
+Yes, I'd like to book an appointment for 1 at 09:15 on Wednesday. Can you do that?
+No. I think I am all set. Thanks.
+Hey, I'm up south can you give me a clinic to get flu shots?
+Can I have the address and telephone number?
+THAT WILL BE FINE.
